fix video title width on mobile

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1436,6 +1436,9 @@ code {
 		margin: 5px 2.5%;
 		width: 95%;
 	}
+	#post .video .title {
+		width: 100%;
+	}
 	#post .video-holder a img {
 		width: 100%;
 	}
